[package]
name = "alive_lock_file"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
repository = "https://github.com/wiiznokes/alive_lock_file"
keywords = ["deadlock", "filelock", "lock", "lockfile"]
description = """
A simple crate to create lock files without creating dead locks
"""

[dependencies]
anyhow = "1"
dirs = "5"
log = "0.4"
# signal-hook = "0.3"
